# LearnOpengl

./: .#README.md  .gitignore  CMakeLists.txt  README.md
include/: Shader.h
include/glad/: glad.h
lib/win_x64/: glfw3.lib
src/: FragmentShader.fs  VertexShader.vs  glad.c  main.cpp
